# repo

./: .gitignore  Pipfile  README.md  c_test.txt  c_train.txt  config.yaml  datasets.py  dgl_connectome.py  dgl_generic.py  dgl_test.py  preprocess.py  pyproject.toml  run_seal.py  test.txt  testing.ipynb  train.py  train.txt
data/: connectome.txt
models/: classical.py  kronecker.py  spectral_clustering.py  stochastic_block.py
