[tool.poetry]
name = "link_reconstruction"
version = "0.0.1"
description = "Link and Node Regeneration in Large Scale Neural Connectomes"
authors = ["Daniel Cripps <binary.riviera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.6.3"
numpy = "^1.22.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
